--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit == 1.38.0
 pandas == 2.2.3
 plotly == 5.24.1
-seaborn
-gspread
-gspread_dataframe
-oauth2client
-st-gsheets-connection
+seaborn == 0.13.2
+gspread == 6.1.2
+gspread_dataframe == 4.0.0
+oauth2client == 4.1.3
+st-gsheets-connection == 0.1.0
